--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a marketing assistant</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Sparks, MD</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Traveling, reading, exercising, cooking, movie watching, Zumba</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Author & web developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Sparks, MD</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>For the opportunity and ability to build cool web applications</p>
     </section>
 
     <footer id="footer">
